--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
   "require": {
   },
   "require-dev": {
-    "phpunit/phpunit": "3.7.14"
+    "phpunit/phpunit": "^7"
+  },
+  "autoload": {
+    "psr-4": {
+      "components\\": "components/"
+    }
   }
 }
